--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@imgly/background-removal": "^1.5.5",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "lucide-react": "^0.460.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
